resources2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phpapp7
spec:
  finalizers:
  - kubernetes
