resources2/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phpapp7
    app.kubernetes.io/component: phpapp
    app.kubernetes.io/instance: phpapp
  name: phpapp7
  namespace: phpapp7
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: phpapp7
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: phpapp7
    spec:
      containers:
      - image: docker.io/lasher/debugocp
        imagePullPolicy: IfNotPresent
        name: phpapp7
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
