resources2/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: phpapp7
  namespace: phpapp7
  labels:
    name: phpapp7
spec:
  path: "/"
  to:
    kind: Service
    name: phpapp7
